[package]
name = "bili_ticket_gt_java"
version = "0.3.2"
edition = "2021"

[lib]
name = "bili_ticket_gt_java"
crate-type = ["cdylib"]

[features]
py = ["dep:pyo3"]

[dependencies]
reqwest = {version = "0.12", features = ["blocking", "json"]}
serde = "1.0"
serde_json = "1.0"
image = "0.25"
pyo3 = { version = "0.23.5", features = ["auto-initialize", "extension-module"], optional = true}
captcha_breaker = "0.0.0-dev.7"
jni = "0.21.1"
once_cell = "1.19.0"


rsa = "0.9"
rand = "0.8.5"
hex="0.4"
soft-aes="0.2"
md5 = "0.7"

[patch.crates-io]
ort = { git="https://github.com/biliticket/ort" }
ort-sys = { git = "https://github.com/biliticket/ort" }
